--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
     <div class="loader" id="loader" hidden>
       <img src="loader.svg" alt="loading" />
     </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+      <img
+        src="https://images.unsplash.com/photo-1655116821966-affb00d85ae4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDV8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1655116821966-affb00d85ae4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDV8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+        alt=""
+      />
+      <img
+        src="https://images.unsplash.com/photo-1655116821966-affb00d85ae4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDV8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+        alt=""
+      />
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
